# hw-preflight

./: .clang-format  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: run_suite_bench.py
config/: README.md  preflight.example.yaml
config/profiles/: ci-runner.yaml  edge-device.yaml  production-server.yaml
docs/: checks.md
examples/: sample-run.json  sample-run.md
hwprobe/: CMakeLists.txt
hwprobe/src/: bindings.cpp  cpuid.cpp  cpuid.h  dmi.cpp  dmi.h  main.cpp
hwprobe/tests/: fuzz_cpuid.cpp  test_cpuid.cpp  test_cpuid_fuzz.cpp  test_dmi.cpp
src/hw_preflight/: __init__.py  _hwprobe.py  cli.py  config.py  profiles.py  reports.py  runner.py  webhook.py
src/hw_preflight/checks/: __init__.py  _base.py  clocks.py  cpu.py  disk.py  gpio.py  iommu.py  memory.py  network.py  security.py  serial.py  service.py  storage.py  system.py  thermal.py
tests/: conftest.py
tests/e2e/: test_serial_loopback.py
tests/integration/: test_real_run.py
tests/unit/: test_bench_harness.py  test_cli.py  test_clocks_check.py  test_config.py  test_coverage_extras.py  test_cpu_checks.py  test_disk_check.py  test_gpio_checks.py  test_hwprobe_wrapper.py  test_iommu_check.py  test_memory_checks.py  test_network_check.py  test_profiles.py  test_reports.py  test_runner.py  test_runner_parallel.py  test_runner_properties.py  test_security_checks.py  test_serial_checks.py  test_service_check.py  test_storage_checks.py  test_system_checks.py  test_thermal_check.py  test_webhook.py
